--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
 </head>
 <body>
     <h1><U>shreyas suthar</U></h1>
-    <img src="Shreyas.jpg" alt="shreyas foto" height="200">
+    <img src="Shreyas1.jpg" alt="shreyas foto" height="200">
     <h2>SUMMARY</h2>
     <p>i am hardworking and dedicated individual with experience in mechanical engineering.</p>
     <hr />
     <h2>EDUCATION</h2>
     <ul>
-        <li>D.M.E(PATAN)</li>
-        <LI>B.E.(AHMEDABAD)</LI>
-        <LI>C.I.P.E.T.(AHMEDABAD)</LI>
-        <LI>WEB DEVELOPERS(AHEMDABAD)</LI>
+        <li>D.M.E</li>
+        <LI>B.E</LI>
+        <LI>C.I.P.E.T</LI>
+        <LI>WEB DEVELOPERS</LI>
     </ul>
     <hr />
     <H2>WORK EXPERIENCE</H2>
     <UL>
-        <LI><B>SIGMA SURGICAL PVT LTD</B></LI>
+        <LI><B>XYZ PVT LTD</B></LI>
         <P>MARCH 2018-MARCH 2024</P>
         <UL>
             <LI>OPERATING VMC MACHINE</LI>
             <LI>PROGRAMMING VMC MACHINE</LI>
         </UL>
         <BR />
-        <LI><B>A.M.DESIGN PVT LTD</B></LI>
+        <LI><B>XYZ PVT LTD</B></LI>
         <P>APRIL 2024- PRESENT</P>
         <UL>
             <LI>OPERATING VMC MACHINE</LI>
@@ -45,7 +45,7 @@
     <HR />
     <H2>AWARDS AND CERTIFICATIONS</H2>
     <UL>
-        <LI>PERFORMANCE OF THE MONTHS-A.M.DESIGN(APRIL 2024)</LI>
+        <LI>PERFORMANCE OF THE MONTHS(APRIL 2024)</LI>
     </UL>
     <HR />
     <H2>OTHER</H2>
@@ -54,7 +54,7 @@
         <LI><a href="contact.html">contact me</a></LI>
     </UL>
     <footer>
-        &copy; shreyas suthar. ALL RIGHTS RESERVED.
+        &copy; shreyas. ALL RIGHTS RESERVED.
     </footer>
 </body>
 </html>
